panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__call__test_return_void_from_void_function.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/call/test_return_void_from_void_function.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/call/test_return_void_from_void_function.c"
   (function-definition
      f~0 `fn() -> void`
      (compound-statement))
   (function-definition
      g~2 `fn() -> void`
      (compound-statement
         (return (call (name f~0 `fn() -> void`)))))
   (function-definition
      main~4 `fn() -> int`
      (compound-statement
         (expression (call (name g~2 `fn() -> void`))))))

----- stderr -----
