panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__call__test_simple.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/call/test_simple.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/call/test_simple.c"
   (function-definition
      f~0 `fn(x: int) -> int`
      (params
         x~2 `int`)
      (compound-statement
         (return (name x~2 `int`))))
   (function-definition
      main~3 `fn() -> int`
      (compound-statement
         (declaration x~5 `int` 42)
         (declaration y~6 `int`
            (call (name f~0 `fn(x: int) -> int`)
               (name x~5 `int`)))
         (return (name y~6 `int`)))))

----- stderr -----
