panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__call__test_simple_declaration.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/call/test_simple_declaration.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/call/test_simple_declaration.c"
   (declaration f~0 `fn(∅: int) -> int` ∅)
   (function-definition
      main~1 `fn() -> int`
      (compound-statement
         (return
            (call (name f~0 `fn(∅: int) -> int`)
               42))))
   (function-definition
      f~0 `fn(x: int) -> int`
      (params
         x~5 `int`)
      (compound-statement
         (return (name x~5 `int`)))))

----- stderr -----
